# sprinter

./: .gitignore
src/sprinter_control/: package.xml  setup.cfg  setup.py
src/sprinter_control/sprinter_control/: bolt_motion.py  distance_sensor.py  finish_line_markers.py  finish_line_markers_old.py.inactiv  gait_jointstate.py.inactiv  sprint_controller.py  sprint_controller.py.inactiv  sprinter.py
src/sprinter_description/: CMakeLists.txt  CMakeLists.txt.inactiv  package.xml
src/sprinter_description/config/: sprinter_controllers.yaml
src/sprinter_description/launch/: rviz_view.launch.py  sprinter_sim.launch.py  sprinter_sim.launch.py.inactiv  sprinter_sim_simple.launch.py.inactiv  sprinter_sim_simple.launch.py.old
src/sprinter_description/meshes/: Bein.stl  Oberschenkel.stl  Sensor.stl
src/sprinter_description/urdf/: ground_plane.sdf  leg_macro.xacro  leg_macro_simple.xacro.inactiv  runner.urdf.xacro.inactiv  sensor.urdf.xacro.inactiv  sprinter.rviz.inactiv  sprinter.xacro  sprinter.xacro.old  sprinter_best_view.rviz.inactiv  sprinter_simple.urdf.xacro.inactiv  sprinter_simple.xacro.inactiv
